[metadata]
name = pytexas2015
summary = pytexas 2015 Demo Ryu Controller
description-file =
    README.rst
author = Alan Quillin
author-email = alanquillin@gmail.com
home-page = http://www.alanquillin.com
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4

[files]
packages =
    pytexas2015

[compile_catalog]
directory = pytexas2015/locale
domain = pytexas2015

[update_catalog]
domain = pytexas2015
output_dir = pytexas2015/locale
input_file = upytexas2015/locale/pytexas2015.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = pytexas2015/locale/pytexas2015.pot
